--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-h1 {
-    color: red;
+.social-btn {
+    height: 1.5rem;
+    text-align: center;
+    font-size: 12px;
+    padding: 0 1rem 0 1rem;
+    font-family: Roboto;
 }
