--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -1,2 +1,23 @@
-<h1>Advertisements#new</h1>
-<p>Find me in app/views/advertisements/new.html.erb</p>
+<h1>New Advertisement</h1>
+
+<div class="row">
+    <div class="col-md-8">
+        <%= form_for @advertisement do |f| %>
+            <div class="form-group">
+                <%= f.label :title %>
+                <%= f.text_field :title, class: 'form-control', placeholder: "Enter advertisement title" %>
+            </div>
+            <div class="form-group">
+                <%= f.label :body %>
+                <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter advertisement body" %>
+            </div>
+            <div class="form-group">
+                <%= f.label :price %>
+                <%= f.number_field :price, class: 'form-control', placeholder: "Enter advertisement price" %>
+            </div>
+            <div class="form-group">
+                <%= f.submit "Save", class: 'btn btn-success' %>
+            </div>
+        <% end %>
+    </div>
+</div>
