--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <div class="pull-right user-info">
         <% if current_user %>
           <%= current_user.name %> - <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+          <img class="gravatar" src="<%= avatar_url(current_user) %>">
         <% else %>
           <%= link_to "Sign In", new_session_path %> or
           <%= link_to "Sign Up", new_user_path %>
