--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,7 +9,10 @@
     <div class="col-md-8">
         <p class="lead"><%= @topic.description %></p>
         <% @topic.posts.each do |post| %>
-            <%= render post %>
+            <div class="media">
+                <%= render partial: 'votes/voting', locals: { post: post } %>
+                <%= render post %>
+            </div>
         <% end %>
     </div>
     <% if current_user %>
